feat: implement routing and layout structure with multiple pages

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 html,
 body {
   background-color: #000000;
   color: white;
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 h1 {
